// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders while status is <Completed> 1`] = `
<div
  className="commandBarTwo"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="spacer"
  />
  <div
    className="farItems"
  >
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`CommandBar renders while status is <Default> 1`] = `
<div
  className="commandBarTwo"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="spacer"
  />
  <div
    className="farItems"
  >
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`CommandBar renders while status is <Failed> 1`] = `
<div
  className="commandBarTwo"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="spacer"
  />
  <div
    className="farItems"
  >
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`CommandBar renders while status is <Scanning> 1`] = `
<div
  className="commandBarTwo"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={true}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="spacer"
  />
  <div
    className="farItems"
  >
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;
